--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </main>
         <footer id="contact">
             <div class="txt">
-                <p>Feito por <a href="https://www.linkedin.com/in/rafael-santos-17834a20b/" target="_blank">Rafael Santos&copy;</a>
+                <p>Made by <a href="https://www.linkedin.com/in/rafael-santos-17834a20b/" target="_blank">Rafael Santos&copy;</a>
                 </p>
             </div>
             <div class="logos">
